(partially) fixed the span logic window display on IE7
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@44334 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/spanlogic.css
+++ b/Site/htdocs/assets/css/spanlogic.css
@@ -28,13 +28,19 @@
   white-space:nowrap;
   text-align:center;
   font-style:italic;
-//  color:#605151;
- // margin-bottom:16px;
+/*
+  color:#605151;
+  margin-bottom:16px;
+*/
 }
 
+/* fix comment syntax error.
+   need to comment out white-space since it cause a layout issue on IE7.
 .span-step-text{
- // font-style:italic;
+  font-style:italic;
   white-space:nowrap;
+*/
+.span-step-text{
   padding-bottom: 23px;
   font-size:125%;
   font-weight:bold;
@@ -100,7 +106,7 @@
 .span-step-text .other_step,
 .span-step-text .comparison_type,
 .span-step-text .comparison_num {
-	font-style: normal; //remove italics
+	font-style: normal; /*remove italics */
 }
 ul.horizontal {
   padding: 5px 0;
